--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.14.0",
+    "react-countdown-circle-timer": "^2.3.7",
     "react-dom": "^16.14.0",
     "react-scripts": "3.4.3",
     "videokit": "^1.0.3"
